# for display continuity sake please use 2 spaces instead of tabs

2013-03-18 mmichaud <michael.michaud@free.fr>
  * small fix in Add3DGeometryAttributesPLugIn maxSlope calculation

2013-03-17 Matthias Scholz <ms@jammerhund.de>
  * Fix some german translations
  * Fix AboutDialog.formatDirNameForHtml(), because if a HTML text for a JLabel
    contains a leading "/", their is nothing displayed. This is a well known
    Java Bug (http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6688690).
    This bug occurs only under Linux, because every path starts with 
    a leading "/".

2013-03-17 mmichaud <michael.michaud@free.fr>
  * Fix two problems in SimplifyPolygonCoveragePlugIn : some polygons were 
    missing in the result and sometimes the wrong attributes were transferred

2013-03-13 mmichaud <michael.michaud@free.fr>
  * change default Open Wizard to Open File (was Open Project) 

2013-03-13 mmichaud <michael.michaud@free.fr>
  * extend SelectionStyllingOptionsPanel to support fill color and fill opacity 
    customization
  * fix a problem in the scale displayed in the status bar (moved the code 
    from AbstractCursorTool to WorkbenchFrame which is a zoomChanged listener).
  
2013-03-12 ede
  * general shortcut support, shortcut documentation under Help
  * added -print-properties command line switch

2013-03-09 mmichaud <michael.michaud@free.fr>
  * add createExactlyOneSelectedLayerMustBeEditableCheck in DuplicateItemPlugIn
    to avoid a NPE (no layer selected) and make sure the user knows where 
    items will be copied.
  * PasteItemPlugIn : replace current selection by newly copied features

2013-03-07 mmichaud <michael.michaud@free.fr>
  * R_G_B attribute is now excluded from ColourTheming attribute candidates

2013-03-01 mmichaud <michael.michaud@free.fr>
  * fix a problem with shapefilewriter and the use of 
    overrideWithExistingCompatibleDbfFieldDef(patch from Larry Becker)

2013-02-24 mmichaud <michael.michaud@free.fr>